<resources>
    <string name="app_name">MatchCats</string>
    <string name="play">PLAY</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="_1_player">1 Player</string>
    <string name="_2_player">2 Player</string>
    <string name="exit">EXIT</string>
    <string name="what_name">Whats is your name?</string>
    <string name="pts">Points</string>
    <string name="game_over">Game Over!</string>
    <string name="congratulations_you_scored">Congratulations! You scored</string>
    <string name="main_menu">Main Menu</string>
    <string name="name_of_player_two">Name of Player Two</string>
    <string name="name_of_player_one">Name of Player One</string>
    <string name="loading">Loading...</string>
    <string name="player_1_turn">Player 1 turn</string>
    <string name="player_2_turn">Player 2 turn</string>
    <string name="double_string">%s %s</string>
    <string name="triple_string">%s %s %s</string>
    <string name="not_possible">It was not possible create the game</string>
    <string name="next_level">NEXT LEVEL</string>
</resources>
