<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginLeft="@dimen/margin_padding_small"
        android:layout_marginRight="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginLeft="@dimen/margin_padding_small"
        android:layout_marginRight="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btPlay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginLeft="@dimen/margin_padding_small"
        android:layout_marginRight="@dimen/margin_padding_small"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:background="@drawable/button_shape"
        android:padding="@dimen/margin_padding_small"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btHighscores"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btHighscores"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginRight="@dimen/margin_padding_small"
        android:background="@drawable/button_shape"
        android:padding="@dimen/margin_padding_small"
        android:text="@string/highscores"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btPlay"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgNumberOfPlayers"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:background="@drawable/button_shape"
        android:padding="@dimen/margin_padding_small"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPlay">


        <RadioButton
            android:id="@+id/rbOnePlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@android:color/white"
            android:checked="true"
            android:padding="@dimen/margin_padding_small"
            android:text="@string/_1_player"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbTwoPlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@android:color/white"
            android:padding="@dimen/margin_padding_small"
            android:text="@string/_2_player"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/btExit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape"
        android:padding="@dimen/margin_padding_small"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>